fix: fill viewport background on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -35,13 +35,15 @@
   }
 }
 
-html {
-  padding: 12px;
+html,
+body {
+  block-size: 100%;
 }
 
 .card {
   display: block;
   container-type: inline-size;
+  padding-block-start: 12px;
 }
 
 .anki-md-wrapper {
